@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES=libreplace.la
-libreplace_la_SOURCES=memdup.c catstr.c
+libreplace_la_SOURCES=memdup.c catstr.c fexist.c
 libreplace_la_LIBADD=$(LTLIBOBJS)
-noinst_HEADERS=memdup.h catstr.h macros.h
+noinst_HEADERS=memdup.h catstr.h macros.h fexist.h
 EXTRA_DIST=memcmp.c strlwr.c strlwr.h
 
